# tyr

./: .gitignore  .releaserc.json  .tyr_cache.json  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  _id-manager.md  id-manager.md  legacy-backend.md  pyproject.toml  tigoid_orm.md  tyr.py
.github/workflows/: release.yml
changelogs/: CHANGELOG-2025-11.md
es/: PLUGINS.md  README.md
plugins/: README.md  __init__.py  auth_checker.py  base.py  base_analyzer.py  code_smell_detector.py  command_injection_detector.py  csrf_protection_checker.py  github_advisory.py  insecure_deserialization_detector.py  nvd.py  osv.py  path_traversal_detector.py  secrets_scanner.py  secure_logging_checker.py  security_misconfiguration_detector.py  sql_injection_detector.py  ssrf_detector.py  xss_detector.py
